Close Bug #10235.

This makes domxml_root() work again. It now works
equally as well as object method or a simple function.